# That-is-Pum-Poom

./: .env.example  .gitignore  README.md  docker-compose.local-backend.yml  docker-compose.yml  pyproject.toml  requirements-telegram.txt  requirements-vision.txt  requirements-voice.txt  requirements.txt
api/: main.py
backend/: .dockerignore  Dockerfile  app.py  camera-endpoint-detector.py  camera_discovery.py  face_core.py  face_matching.py  monitor.py  requirements.txt  telegram_bot.py  test_face_detection.py  worker.py  worker_multiproc.py
config/: autonomy.json  permissions.json  system.json
core/: __init__.py  scheduler.py
core/agents/: base.py  (+5 more)
desktop/: electron-builder.json  index.html  main.js  package-lock.json  package.json  preload.js  tailwind.config.js  vite.config.ts
docker/: Dockerfile.core  Dockerfile.telegram  Dockerfile.vision  Dockerfile.voice
docs/: ARCHITECTURE.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tmpclaude-e559-cwd  vite.config.js
go2rtc/: go2rtc.yaml
intelligence/: __init__.py  code_scoring.py  crisis.py  daily_brief.py  feedback_loop.py  improvement.py  predictive.py  self_analysis.py
nginx/: nginx.conf  nginx.local-backend.conf
scripts/: autostart.ps1  health_check.py  init_db.sql  korgan_startup.ps1  run-backend-local.ps1  run-backend-local.sh  setup.ps1
telegram/: __init__.py  __main__.py  bot.py  config.py
tests/: conftest.py
vision/: __init__.py  embeddings.py  face_recognition.py  service.py
voice/: __init__.py  service.py  speaker_recognition.py  tts_engine.py  whisper_stt.py
(+92 files in other folders)
