[project]
name = "korgan-ai"
version = "1.0.0"
description = "KORGAN AI — Personal AI Operating System"
authors = [{name = "Amanat Korgan"}]
requires-python = ">=3.12"
license = {text = "Proprietary"}

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
